cabal-version:      3.0
name:               lambda-buffers-frontend
version:            0.1.0.0
synopsis:           Lambda Buffers Frontend
author:             MLabs LTD
maintainer:         info@mlabs.city
extra-source-files: data/**/*.lbf
data-files:         data/**/*.lbf

flag dev
  description: Enable non-strict compilation for development
  manual:      True

common common-language
  ghc-options:
    -Wall -Wcompat -fprint-explicit-foralls -fprint-explicit-kinds
    -fwarn-missing-import-lists -Weverything -Wno-unsafe
    -Wno-missing-safe-haskell-mode -Wno-implicit-prelude
    -Wno-missing-kind-signatures -Wno-all-missed-specializations

  if !flag(dev)
    ghc-options: -Werror

  default-extensions:
    NoStarIsType
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DoAndIfThenElse
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    ExplicitNamespaces
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    PostfixOperators
    RankNTypes
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TemplateHaskell
    TraditionalRecordSyntax
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    ViewPatterns

  default-language:   Haskell2010

library
  import:          common-language
  build-depends:
    , base                        >=4.16
    , containers                  >=0.6
    , directory                   >=1.3
    , filepath                    >=1.4
    , lambda-buffers-codegen-pb   >=0.1
    , lambda-buffers-compiler     >=0.1
    , lambda-buffers-compiler-pb  >=0.1
    , lambda-buffers-lang-pb      >=0.1
    , lens                        >=5.2
    , mtl                         >=2.2
    , parsec                      >=3.1
    , prettyprinter               >=1.7
    , proto-lens                  >=0.7
    , text                        >=1.2
    , transformers                >=0.5

  hs-source-dirs:  src
  exposed-modules:
    LambdaBuffers.Frontend
    LambdaBuffers.Frontend.CheckReferences
    LambdaBuffers.Frontend.Errors
    LambdaBuffers.Frontend.Errors.Codegen
    LambdaBuffers.Frontend.Errors.Compiler
    LambdaBuffers.Frontend.Errors.Frontend
    LambdaBuffers.Frontend.Errors.Utils
    LambdaBuffers.Frontend.Monad
    LambdaBuffers.Frontend.Parsec
    LambdaBuffers.Frontend.PPrint
    LambdaBuffers.Frontend.Scope
    LambdaBuffers.Frontend.Syntax
    LambdaBuffers.Frontend.ToProto
    LambdaBuffers.Frontend.Utils

executable lbf
  import:         common-language
  build-depends:
    , base                        >=4.16
    , bytestring                  >=0.11
    , filepath                    >=1.4
    , lambda-buffers-codegen-pb   >=0.1
    , lambda-buffers-compiler-pb  >=0.1
    , lambda-buffers-frontend
    , lens                        >=5.2
    , optparse-applicative        >=0.17
    , prettyprinter               >=1.7
    , process                     >=1.6
    , proto-lens                  >=0.7
    , temporary                   >=1.3
    , text                        >=1.2

  hs-source-dirs: app
  main-is:        Main.hs
  other-modules:
    LambdaBuffers.Frontend.Cli.Build
    LambdaBuffers.Frontend.Cli.Env
    LambdaBuffers.Frontend.Cli.Format
    LambdaBuffers.Frontend.Cli.Utils

test-suite tests
  import:          common-language
  type:            exitcode-stdio-1.0
  hs-source-dirs:  test
  main-is:         Test.hs
  build-depends:
    , base                     >=4.16
    , containers               >=0.6
    , filepath                 >=1.4
    , lambda-buffers-frontend
    , parsec                   >=3.1
    , prettyprinter            >=1.7
    , tasty                    >=1.4
    , tasty-hunit              >=0.10

  autogen-modules: Paths_lambda_buffers_frontend
  other-modules:
    Paths_lambda_buffers_frontend
    Test.LambdaBuffers.Frontend
    Test.LambdaBuffers.Frontend.Parsec
