cabal-version: 3.0
name:          plutustx-env
version:       0.1.0.0
synopsis:      Lambda Buffers PlutusTxEnv
author:        MLabs LTD
maintainer:    info@mlabs.city

library
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
  build-depends:
    , base
    , bytestring
    , containers
    , plutus-ledger-api
    , plutus-tx
    , text
    , transformers

  hs-source-dirs:     autogen src
  exposed-modules:
    LambdaBuffers.Citizen
    LambdaBuffers.Plutus
    LambdaBuffers.Plutus.V1
    LambdaBuffers.Prelude
    LambdaBuffers.Runtime.Haskell
    LambdaBuffers.Runtime.PlutusTx
