cabal-version: 3.0
name:          plutus-haskell
version:       0.1.0.0
synopsis:      Dev shell for LambdaBuffers Plutus Haskell
author:        Drazen Popovic
maintainer:    bladyjoker@gmail.com

flag dev
  description: Enable non-strict compilation for development
  manual:      True

common common-language
  ghc-options:
    -Wall -Wcompat -fprint-explicit-foralls -fprint-explicit-kinds
    -fwarn-missing-import-lists -Weverything -Wno-unsafe
    -Wno-missing-safe-haskell-mode -Wno-implicit-prelude
    -Wno-missing-kind-signatures -Wno-all-missed-specializations

  if !flag(dev)
    ghc-options: -Werror

  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    ExplicitNamespaces
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NoStarIsType
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    PackageImports
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    PostfixOperators
    RankNTypes
    RecordWildCards
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TemplateHaskell
    TraditionalRecordSyntax
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    ViewPatterns

  default-language:   Haskell2010

library
  import:          common-language
  build-depends:
    , aeson                 >=2.2
    , base                  >=4.16
    , bytestring            >=0.11
    , containers            >=0.6
    , lbf-plutus            >=0.1
    , lbf-plutus-plutarch   >=0.1
    , lbf-plutus-plutustx   >=0.1
    , lbf-prelude           >=0.1
    , lbf-prelude-plutarch  >=0.1
    , lbf-prelude-plutustx  >=0.1
    , lbr-plutarch          >=0.1
    , lbr-plutus            >=0.1
    , lbr-plutustx          >=0.1
    , lbr-prelude           >=0.1
    , plutarch              >=1.5
    , plutarch-ledger-api   >=1.2
    , plutus-ledger-api     >=1.20
    , plutus-tx             >=1.1
    , text                  >=2.0

  hs-source-dirs:  src
  exposed-modules: LambdaBuffers.Plutus.Play
