cabal-version: 3.0
name:          haskell-golden
version:       0.1.0.0
synopsis:
  Integration Test Suite for `lbf-prelude` and Haskell `lbr-prelude`

author:        Drazen Popovic
maintainer:    bladyjoker@gmail.com

flag dev
  description: Enable non-strict compilation for development
  manual:      True

common common-language
  ghc-options:
    -Wall -Wcompat -fprint-explicit-foralls -fprint-explicit-kinds
    -fwarn-missing-import-lists -Weverything -Wno-unsafe
    -Wno-missing-safe-haskell-mode -Wno-implicit-prelude
    -Wno-missing-kind-signatures -Wno-all-missed-specializations

  if !flag(dev)
    ghc-options: -Werror

  default-extensions:
    NoStarIsType
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    ExplicitNamespaces
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    PostfixOperators
    RankNTypes
    RecordWildCards
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TemplateHaskell
    TraditionalRecordSyntax
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    ViewPatterns

  default-language:   Haskell2010

library
  import:          common-language
  build-depends:
    , aeson
    , base               >=4.16
    , base64-bytestring
    , bytestring         >=0.11
    , containers         >=0.6
    , lbf-golden-api
    , lbf-prelude
    , lbr-prelude
    , text               >=1.2
    , vector             >=0.12

  hs-source-dirs:  src
  exposed-modules:

test-suite tests
  import:         common-language
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Test.hs
  build-depends:
    , base            >=4.16
    , bytestring      >=0.11
    , containers      >=0.6
    , directory       >=1.3
    , filepath        >=1.4
    , hedgehog        >=1.2
    , lbf-golden-api  >=0.1
    , lbr-prelude
    , tasty           >=1.4
    , tasty-golden
    , tasty-hedgehog  >=1.4
    , tasty-hunit
    , text            >=1.2

  other-modules:
    Test.LambdaBuffers.Runtime.Prelude.Eq
    Test.LambdaBuffers.Runtime.Prelude.Generators.Correct
    Test.LambdaBuffers.Runtime.Prelude.Json
