[package]
name = "lbr-prelude-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.66", default-features = false }
quote = "1.0.33"
syn = { version = "2.0.38", features = ["extra-traits"] }
trybuild = { version = "1.0.49", features = ["diff"] }

[dev-dependencies]
lbr-prelude = { path = ".extras/lbr-prelude", default-features = false }
num-bigint = "0.4.4"
serde_json = "1.0.107"
