[package]
name = "lbr-prelude-derive"
version = "1.0.2"
edition = "2021"
license = "Apache-2.0"
homepage = "https://mlabs-haskell.github.io/lambda-buffers/"
description = "Derive macros for the lambda-buffers Json trait"
repository = "https://github.com/mlabs-haskell/lambda-buffers"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "^1.0.97", default-features = false }
quote = "^1.0.40"
syn = { version = "^2.0.104", features = ["extra-traits"] }
trybuild = { version = "^1.0.110", features = ["diff"] }

[dev-dependencies]
lbr-prelude = { path = ".extras/lbr-prelude-v0", default-features = false }
num-bigint = "~0.4"
serde_json = "^1.0"
