[package]
name = "lbr-prelude"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://mlabs-haskell.github.io/lambda-buffers/"
description = "LambdaBuffers runtime library for the Prelude schema."
repository = "https://github.com/mlabs-haskell/lambda-buffers"

[dependencies]
data-encoding = "^2.4.0"
num-bigint = "~0.4"
proptest = "^1.3.1"
serde = "^1.0.188"
serde_json = { version = "^1.0", features = ["arbitrary_precision"] }
thiserror = "^1.0.49"
lbr-prelude-derive = { version = "0.1.0", path = ".extras/lbr-prelude-derive-0.1.0", optional = true }
plutus-ledger-api = { version = "0.2.0", path = ".extras/plutus-ledger-api-0.2.0", features = [
  "chrono",
], optional = true }

[features]
default = ["derive"]
derive = ["dep:lbr-prelude-derive"]
plutus = ["dep:plutus-ledger-api"]
