[package]
name = "lbr-prelude"
version = "1.0.1"
edition = "2021"
license = "Apache-2.0"
homepage = "https://mlabs-haskell.github.io/lambda-buffers/"
description = "LambdaBuffers runtime library for the Prelude schema."
repository = "https://github.com/mlabs-haskell/lambda-buffers"

[dependencies]
data-encoding = "^2.6.0"
num-bigint = "~0.4"
proptest = "^1.6.0"
serde = "^1.0.216"
serde_json = { version = "^1.0", features = ["arbitrary_precision"] }
thiserror = "^1.0.69"
lbr-prelude-derive = { version = "0.1.2", path = ".extras/lbr-prelude-derive-v0", optional = true }
tokio = { version = "1.42.0", optional = true, features = ["fs"] }
anyhow = { version = "1.0.94", optional = true }

[features]
default = ["derive"]
derive = ["dep:lbr-prelude-derive"]
fs = ["dep:tokio", "dep:anyhow"]
